# LightEWM

./: .deepspeed_env  .gitignore  README.md  pyproject.toml  run.py  task_.md
docs/: data.md  evaluation.md  install.md  libero.md  quickstart.md  wan_i2v_code_guide.md
lightewm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_action_manifest.py  cache_libero_hdr_video_action_joint.py  cache_libero_hdr_video_action_joint_8gpu.sh  check_libero_hdr_action_finegrained.py  compare_hdr_fastwam_action_grad.py  convert_libero_to_csv.py  convert_libero_to_idm_metadata.py  debug_hdr_action_flow_overfit.py  download_eval_assets.sh  eval_hdr_action_open_loop.py  eval_hdr_actor_simulator_only.py  eval_hdr_video_action_joint.py  eval_libero_action_only_online_batch.py  eval_libero_hdr_video_action_joint_suites.py  evaluate_action_head_mvp.py  evaluate_libero_expert_replay.py  evaluate_normalized_generated_dir.sh  evaluate_video_quality.py  generate_dense_prompt_qwen_vl.py  hdr_action_only_libero_grad.py  infer.sh  infer_libero.sh  inspect_hdr_joint_action_mask.py  make_libero_hdr_cache_three_column.py  normalize_generated_videos.py  plot_fastwamhdr_open_loop_actions.py  precache_fastwamhdr_latents.py  precache_libero_hdr_video_latents.py  prepare_eval_split.py  prepare_libero_hdr_actions.py  prepare_libero_joint_actions.py  prepare_libero_joint_proprio_stats.py  process_cache.sh  process_dense_prompt.sh  process_libero_cache.sh  replay_libero_hdr_action.py  run_fastwam_libero_grad_smoke.py  run_video_quality_sharded.sh  smoke_bidirectional_infer.sh  smoke_libero_finetune.sh  (+6 more)
tests/: test_backend_manifest.py  test_causal_forcing_dataset.py  test_eval_manifest.py
(+318 files in other folders)
